--- a/app/compomemts/StatisticTable/StatisticsRow/StatisticsRow.module.scss
+++ b/app/compomemts/StatisticTable/StatisticsRow/StatisticsRow.module.scss
@@ -3,6 +3,7 @@
 
 .wrapper {
   display: flex;
+  align-items: flex-start;
   gap: 15px;
   padding: 15px;
   border-radius: 10px;
@@ -83,18 +84,16 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  min-width: 80px;
   background: #2a2a2a;
   border-radius: 6px;
   font-size: 14px;
-  flex-basis: 140px;
 
   text-align: center;
   white-space: nowrap;
   text-overflow: ellipsis;
   flex: 1;
-  min-width: 120px;
-  max-width: 150px;
+  // min-width: 120px;
+  // max-width: 150px;
   font-size: 14px;
   font-weight: bold;
   overflow: hidden;
