--- a/app/layout.module.scss
+++ b/app/layout.module.scss
@@ -8,19 +8,14 @@
   margin: 0;
   padding: 0;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  height: 100%;
   font-size: 16px;
   font-weight: 700;
   line-height: 19.2px;
-  margin: 0 auto;
 }
 
 .main {
   flex-grow: 1;
   padding: 30px;
-  padding-left: 200px;
+  margin-left: 350px;
   padding-top: 32px;
 }
