--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -9,6 +9,8 @@ $color-dark-blue: #3b4255;
 $color-orange: #f15a22;
 $color-blue: rgba(0, 102, 182, 1);
 $color-hover: #f15a22;
+$color-primary: #527bfb;
+$cs-orange: #f7931a;
 
 $anim: all 0.5s ease;
 
