--- a/app/compomemts/PlayerSelection/PlayerSelection.module.scss
+++ b/app/compomemts/PlayerSelection/PlayerSelection.module.scss
@@ -60,3 +60,9 @@
   user-select: none;
   flex-grow: 1;
 }
+
+.title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
