--- a/app/compomemts/TeamStatsPage/TeamStatsPage.module.scss
+++ b/app/compomemts/TeamStatsPage/TeamStatsPage.module.scss
@@ -3,6 +3,7 @@
 
 .pageContainer {
   padding: 20px;
+
   background: #2a2a2a;
   border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -10,11 +11,15 @@
 }
 
 .pageTitle {
-  font-size: 24px;
+  font-size: 16px;
   color: $color-white;
   font-weight: 700;
   display: flex;
   column-gap: 8px;
+
+  @include mixins.viewport--md {
+    font-size: 24px;
+  }
 }
 
 .error {
