--- a/app/layout.module.scss
+++ b/app/layout.module.scss
@@ -8,14 +8,19 @@
   margin: 0;
   padding: 0;
   display: flex;
+  flex-direction: column;
   font-size: 16px;
   font-weight: 700;
   line-height: 19.2px;
 }
 
 .main {
-  flex-grow: 1;
-  padding: 30px;
-  margin-left: 350px;
   padding-top: 32px;
+  padding: 15px;
+
+  @include mixins.viewport--md {
+    margin-left: 350px;
+    flex-grow: 1;
+    padding: 30px;
+  }
 }
