--- a/app/compomemts/MainTitle/MainTitle.module.scss
+++ b/app/compomemts/MainTitle/MainTitle.module.scss
@@ -1,4 +1,5 @@
 @use '../../../styles/variables.scss' as *;
+@use '../../../styles/mixins.scss' as mixins;
 
 .titleContainer {
   margin-bottom: 30px;
@@ -6,7 +7,7 @@
 }
 
 .mainTitle {
-  font-size: 28px;
+  font-size: 16px;
   font-weight: 700;
   color: #fff;
   text-transform: uppercase;
@@ -17,6 +18,10 @@
   text-shadow: 0 0 10px rgba(82, 123, 251, 0.3);
   text-align: end;
   width: 100%;
+
+  @include mixins.viewport--md {
+    font-size: 28px;
+  }
 }
 
 .titleUnderline {
