--- a/app/compomemts/PlayerSelection/PlayerSelection.module.scss
+++ b/app/compomemts/PlayerSelection/PlayerSelection.module.scss
@@ -65,4 +65,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 20px;
+  font-size: 20px;
+  line-height: 1;
 }
