--- a/app/compomemts/StatisticTable/StatisticTable.module.scss
+++ b/app/compomemts/StatisticTable/StatisticTable.module.scss
@@ -66,9 +66,6 @@
   flex: 1.5;
 }
 
-.container {
-}
-
 .header {
   display: flex;
   justify-content: space-between;
@@ -83,4 +80,12 @@
   font-size: 20px;
   color: #fff;
   font-weight: 700;
+}
+
+.innerWrapper {
+  overflow-x: auto;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: stretch;
 }
