--- a/app/layout.module.scss
+++ b/app/layout.module.scss
@@ -1,6 +1,3 @@
-@use '../styles/variables.scss' as *;
-@use '../styles/mixins.scss' as mixins;
-
 .body {
   font-family: $font-main;
   color: $color-white;
@@ -18,9 +15,13 @@
   padding-top: 32px;
   padding: 15px;
 
-  @include mixins.viewport--md {
-    margin-left: 350px;
+  @include mixins.viewport--lg {
+    margin-left: 300px;
     flex-grow: 1;
     padding: 30px;
+  }
+
+  @include mixins.viewport--xl {
+    margin-left: 350px;
   }
 }
